Change animal `type` property to `species`

--- a/modules/openapi-generator/src/test/resources/3_0/petstore-with-fake-endpoints-models-for-testing.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/petstore-with-fake-endpoints-models-for-testing.yaml
@@ -1483,14 +1483,14 @@ components:
     Animal:
       type: object
       discriminator:
-        propertyName: type
+        propertyName: species
         mapping:
           DOG: '#/components/schemas/Dog'
           CAT: '#/components/schemas/Cat'
       required:
-        - type
+        - species
       properties:
-        type:
+        species:
           type: string
         color:
           type: string
