Remove Bean validation for Maps

--- a/modules/openapi-generator/src/test/resources/bugs/issue_14723.yaml
+++ b/modules/openapi-generator/src/test/resources/bugs/issue_14723.yaml
@@ -22,6 +22,11 @@ components:
     ResponseTest:
       type: object
       properties:
+        details:
+          type: object
+          additionalProperties:
+            type: object
+          description: An object with key/value pairs containing additional information about the error.
         response:
           type: array
           description: dtos
