--- a/.github/workflows/samples-erlang.yaml
+++ b/.github/workflows/samples-erlang.yaml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: erlef/setup-beam@v1
         with:
-          otp-version: "22.2"
-          rebar3-version: "3.14.3"
+          otp-version: ['20.3', '21.3', '22.2']
+          rebar3-version: ['3.14.1', '3.14.3']
       - run: rebar3 compile
         working-directory: ${{ matrix.sample }}
