--- a/.github/workflows/samples-erlang.yaml
+++ b/.github/workflows/samples-erlang.yaml
@@ -14,7 +14,7 @@ on:
 jobs:
   build:
     name: Build Erlang projects
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix:
