test with macos-latest

--- a/.github/workflows/samples-swift.yaml
+++ b/.github/workflows/samples-swift.yaml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
     name: Build Swift projects
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
