Add sample scenario and test for jackson serialization and deserialization

--- a/modules/openapi-generator/src/test/resources/3_0/java/native/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/java/native/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
@@ -1424,6 +1424,14 @@ components:
           properties:
             declawed:
               type: boolean
+    Special-Cat:
+      allOf:
+        - $ref: '#/definitions/Cat'
+        - type: object
+          properties:
+            kind:
+              type: string
+              enum: [lions, tigers, leopards, jaguars]
     Address:
       type: object
       additionalProperties:
