--- a/modules/openapi-generator/src/test/resources/3_0/oneof_polymorphism_and_inheritance.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/oneof_polymorphism_and_inheritance.yaml
@@ -105,24 +105,6 @@ components:
         - $ref: "#/components/schemas/FooRef"
       discriminator:
         propertyName: "@type"
-    RefOrValueEnum:
-      type: string
-      enum: [REF, VALUE]
-    FooRefOrValueEnumMapping:
-      type: object
-      properties:
-        objectType:
-          $ref: "#/components/schemas/RefOrValueEnum"
-      required:
-        - objectType
-      oneOf:
-        - $ref: "#/components/schemas/Foo"
-        - $ref: "#/components/schemas/FooRef"
-      discriminator:
-        propertyName: "objectType"
-        mapping:
-          VALUE: "#/components/schemas/Foo"
-          REF: "#/components/schemas/FooRef"
     Foo:
       type: object
       properties:
@@ -195,6 +177,38 @@ components:
           type: string
       allOf:
         - $ref: '#/components/schemas/Pizza'
+    FruitType:
+      type: string
+      enum: [APPLE, BANANA]
+    Fruit:
+      type: object
+      properties:
+        fruitType:
+          $ref: "#/components/schemas/FruitType"
+      required:
+        - fruitType
+      oneOf:
+        - $ref: '#/components/schemas/Apple'
+        - $ref: '#/components/schemas/Banana'
+      discriminator:
+        propertyName: fruitType
+        mapping:
+          APPLE: '#/components/schemas/Apple'
+          BANANA: '#/components/schemas/Banana'
+    Apple:
+      type: object
+      required:
+        - seeds
+      properties:
+        seeds:
+          type: integer
+    Banana:
+      type: object
+      required:
+        - length
+      properties:
+        length:
+          type: integer
 
   requestBodies:
     Foo:
