--- a/bin/configs/spring-boot-beanvalidation-no-nullable.yaml
+++ b/bin/configs/spring-boot-beanvalidation-no-nullable.yaml
@@ -4,6 +4,7 @@ library: spring-boot
 inputSpec: modules/openapi-generator/src/test/resources/3_0/spring/petstore-with-fake-endpoints-models-for-testing.yaml
 templateDir: modules/openapi-generator/src/main/resources/JavaSpring
 additionalProperties:
+  groupId: org.openapitools.openapi3
   documentationProvider: springfox
   java8: "false"
   useBeanValidation: true
