--- a/bin/configs/spring-boot-useoptional.yaml
+++ b/bin/configs/spring-boot-useoptional.yaml
@@ -3,6 +3,7 @@ outputDir: samples/server/petstore/springboot-useoptional
 inputSpec: modules/openapi-generator/src/test/resources/3_0/spring/petstore-with-fake-endpoints-models-for-testing.yaml
 templateDir: modules/openapi-generator/src/main/resources/JavaSpring
 additionalProperties:
+  groupId: org.openapitools.openapi3
   documentationProvider: springfox
   useOptional: true
   artifactId: spring-boot-useoptional
