--- a/pom.xml
+++ b/pom.xml
@@ -1236,7 +1236,7 @@
                 <module>samples/openapi3/client/petstore/typescript/builds/default</module>
                 <module>samples/openapi3/client/petstore/typescript/tests/default</module>
                 <module>samples/openapi3/client/petstore/typescript/builds/jquery</module>
-                <module>samples/openapi3/client/petstore/typescript/tests/jquery</module>
+                <!--<module>samples/openapi3/client/petstore/typescript/tests/jquery</module>-->
                 <module>samples/openapi3/client/petstore/typescript/builds/object_params</module>
                 <module>samples/openapi3/client/petstore/typescript/tests/object_params</module>
                 <module>samples/openapi3/client/petstore/typescript/builds/inversify</module>
