Fix CMakeLists.txt for cpp-qt-client

--- a/samples/client/petstore/cpp-qt/CMakeLists.txt
+++ b/samples/client/petstore/cpp-qt/CMakeLists.txt
@@ -5,9 +5,10 @@ set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Network Gui Test)
+
 add_subdirectory(client)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Test)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Test)
 
 add_executable(cpp-qt-petstore
