--- a/.github/workflows/openapi-generator.yaml
+++ b/.github/workflows/openapi-generator.yaml
@@ -36,8 +36,8 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
       - name: redirect-amadeus-repo
-      - uses: actions/checkout@v3
-         - shell: bash
+        uses: actions/checkout@v3
+          - shell: bash
             run: |
               sed -i 's/<url>https\:\/\/oss.sonatype.org\/service\/local\/staging\/deploy\/maven2\/<\/url>/<url>https\:\/\/repository.rnd.amadeus.net\/maven-dev-odi-nce<\/url>/g' pom.xml
               sed -i 's/<id>ossrh<\/id>/<id>central<\/id>/g' pom.xml
