--- a/samples/client/petstore/php-nextgen/OpenAPIClient-php/.gitignore
+++ b/samples/client/petstore/php-nextgen/OpenAPIClient-php/.gitignore
@@ -5,7 +5,8 @@ composer.phar
 
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
+# makes sense since it's a library(client SDK) and not a project
+composer.lock
 
 # php-cs-fixer cache
 .php_cs.cache
