fix: fixed typo in users

--- a/website/src/dynamic/users.yml
+++ b/website/src/dynamic/users.yml
@@ -84,7 +84,7 @@
   infoLink: "https://www.bithost.ch/"
   pinned: true
 -
-  caption: Bosch Connected IndustryfF
+  caption: Bosch Connected Industry
   image: "img/companies/bosch.png"
   infoLink: "https://www.bosch-connected-industry.com"
   pinned: false
