--- a/.github/workflows/samples-go.yaml
+++ b/.github/workflows/samples-go.yaml
@@ -31,6 +31,7 @@ jobs:
         run: |
           go get github.com/labstack/echo/v4/middleware@v4.9.0
           go get github.com/labstack/echo/v4@v4.9.0
+          go get github.com/gorilla/mux
       - name: Build
         working-directory: ${{ matrix.sample }}
         run: go test -v
