--- a/bin/configs/xojo-client-petstore-synchronous.yaml
+++ b/bin/configs/xojo-client-petstore-synchronous.yaml
@@ -3,6 +3,6 @@ outputDir: samples/client/petstore/xojo/client-synchronous
 inputSpec: modules/openapi-generator/src/test/resources/3_0/petstore.yaml
 templateDir: modules/openapi-generator/src/main/resources/xojo-client
 additionalProperties:
-  hideGenerationTimestamp: "false"
+  hideGenerationTimestamp: "true"
   supportsAsync: "false"
   projectName: "XojoOpenAPIClientSynchronous"
