--- a/samples/openapi3/client/petstore/dart-dio/oneof_polymorphism_and_inheritance/pubspec.yaml
+++ b/samples/openapi3/client/petstore/dart-dio/oneof_polymorphism_and_inheritance/pubspec.yaml
@@ -2,6 +2,7 @@ name: openapi
 version: 1.0.0
 description: OpenAPI API client
 homepage: homepage
+repository: repository
 
 environment:
   sdk: '>=2.15.0 <3.0.0'
