--- a/samples/openapi3/client/petstore/dart2/petstore_client_lib_fake/pubspec.yaml
+++ b/samples/openapi3/client/petstore/dart2/petstore_client_lib_fake/pubspec.yaml
@@ -6,6 +6,7 @@ name: 'openapi'
 version: '1.0.0'
 description: 'OpenAPI API client'
 homepage: 'homepage'
+repository: repository
 environment:
   sdk: '>=2.12.0 <3.0.0'
 dependencies:
