mvn clean install

--- a/.github/workflows/gradle-enterprise.yaml
+++ b/.github/workflows/gradle-enterprise.yaml
@@ -37,7 +37,6 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
       - name: Run maven
-        run: mvn clean
+        run: mvn clean install
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
-
