--- a/pom.xml
+++ b/pom.xml
@@ -1174,6 +1174,10 @@
                 <module>samples/client/petstore/rust/reqwest/petstore-async</module>
                 <module>samples/client/petstore/rust/reqwest/petstore-async-middleware</module>
                 <!--<module>samples/client/petstore/javascript-apollo</module>-->
+                <module>samples/client/petstore/python-legacy</module>
+                <module>samples/client/petstore/python-asyncio</module>
+                <module>samples/client/petstore/python-tornado</module>
+                <module>samples/openapi3/client/petstore/python-legacy</module>
             </modules>
         </profile>
         <!-- test with JDK8 in CircleCI -->
@@ -1186,17 +1190,9 @@
                 </property>
             </activation>
             <modules>
-                <module>samples/client/petstore/python-legacy</module>
-                <module>samples/client/petstore/python-asyncio</module>
-                <module>samples/client/petstore/python-tornado</module>
-                <module>samples/openapi3/client/petstore/python-legacy</module>
-                <module>samples/openapi3/client/petstore/python-nextgen</module>
-                <module>samples/openapi3/client/petstore/python-nextgen-aiohttp</module>
-                <module>samples/client/petstore/python-prior</module>
-                <module>samples/client/petstore/python-prior_disallowAdditionalPropertiesIfNotPresent</module>
-                <!-- python clients which don't need the server running -->
-                <module>samples/openapi3/client/petstore/python</module>
-                <module>samples/openapi3/client/petstore/python-prior</module>
+                <module>samples/client/petstore/ruby-faraday</module>
+                <module>samples/client/petstore/ruby</module>
+                <module>samples/client/petstore/ruby-autoload</module>
             </modules>
         </profile>
         <profile>
@@ -1223,6 +1219,11 @@
             </activation>
             <modules>
                 <!-- clients -->
+                <module>samples/openapi3/client/petstore/python-nextgen</module>
+                <module>samples/openapi3/client/petstore/python-nextgen-aiohttp</module>
+                <module>samples/client/petstore/python-prior</module>
+                <module>samples/client/petstore/python-prior_disallowAdditionalPropertiesIfNotPresent</module>
+                <!--<module>samples/openapi3/client/petstore/python-legacy</module>-->
                 <!-- TODO comment out below when the test for typescript-nestjs is ready
                 <module>samples/client/petstore/typescript-nestjs-v6-provided-in-root</module>-->
                 <!-- comment out due to error `npm run build`
@@ -1266,9 +1267,9 @@
                 </property>
             </activation>
             <modules>
-                <module>samples/client/petstore/ruby-faraday</module>
-                <module>samples/client/petstore/ruby</module>
-                <module>samples/client/petstore/ruby-autoload</module>
+                <!-- python clients which don't need the server running -->
+                <module>samples/openapi3/client/petstore/python</module>
+                <module>samples/openapi3/client/petstore/python-prior</module>
             </modules>
         </profile>
         <!-- other tests in CircleCI -->
