--- a/samples/client/petstore/java-helidon-client/mp/pom.xml
+++ b/samples/client/petstore/java-helidon-client/mp/pom.xml
@@ -16,6 +16,9 @@
     <description>OpenAPI Java</description>
     <packaging>jar</packaging>
 
+    <properties>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.helidon.microprofile.rest-client</groupId>
@@ -40,11 +43,6 @@
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-jackson</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.openapitools</groupId>
-            <artifactId>jackson-databind-nullable</artifactId>
-            <version>0.2.6</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
