--- a/samples/client/petstore/java-helidon-client/se/pom.xml
+++ b/samples/client/petstore/java-helidon-client/se/pom.xml
@@ -16,6 +16,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <version.jackson.databind.nullable>0.2.6</version.jackson.databind.nullable>
     </properties>
 
     <dependencies>
@@ -30,6 +31,11 @@
         <dependency>
             <groupId>jakarta.json</groupId>
             <artifactId>jakarta.json-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>jackson-databind-nullable</artifactId>
+            <version>${version.jackson.databind.nullable}</version>
         </dependency>
         <dependency>
             <groupId>io.helidon.media</groupId>
