--- a/samples/server/petstore/java-helidon-server/mp/pom.xml
+++ b/samples/server/petstore/java-helidon-server/mp/pom.xml
@@ -16,6 +16,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <version.jackson.databind.nullable>0.2.6</version.jackson.databind.nullable>
     </properties>
 
     <dependencies>
@@ -34,6 +35,11 @@
         <dependency>
             <groupId>jakarta.ws.rs</groupId>
             <artifactId>jakarta.ws.rs-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>jackson-databind-nullable</artifactId>
+            <version>${version.jackson.databind.nullable}</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
