better handling of oneOf/anyOf with duplicated data type

--- a/modules/openapi-generator/src/test/resources/3_0/csharp/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/csharp/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
@@ -2269,3 +2269,9 @@ components:
         unescapedLiteralString:
           type: string
           default: C:\Users\username
+    OneOfString:
+      oneOf:
+        - type: string
+          pattern: ^a
+        - type: string
+          pattern: ^b
