support position constructor

--- a/modules/openapi-generator/src/test/resources/3_0/java/petstore-with-fake-endpoints-models-for-testing-with-http-signature-okhttp-gson.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/java/petstore-with-fake-endpoints-models-for-testing-with-http-signature-okhttp-gson.yaml
@@ -2223,3 +2223,9 @@ components:
           enum:
             - type_a
             - type_b
+    AdditionalProperties:
+      properties:
+        additional_properties:
+          type: array
+          items:
+            type: string
