--- a/samples/server/petstore/jaxrs-spec-microprofile-openapi-annotations/pom.xml
+++ b/samples/server/petstore/jaxrs-spec-microprofile-openapi-annotations/pom.xml
@@ -2,18 +2,11 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>{{groupId}}</groupId>
-  <artifactId>{{artifactId}}</artifactId>
-  <name>{{artifactId}}</name>
-  <version>{{artifactVersion}}</version>
+  <groupId>org.openapitools</groupId>
+  <artifactId>jaxrs-spec-petstore-server</artifactId>
+  <name>jaxrs-spec-petstore-server</name>
+  <version>1.0.0</version>
 
-{{#parentOverridden}}
-  <parent>
-    <groupId>{{parentGroupId}}</groupId>
-    <artifactId>{{parentArtifactId}}</artifactId>
-    <version>{{parentVersion}}</version>
-  </parent>
-{{/parentOverridden}}
 
   <properties>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
@@ -22,28 +15,14 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-{{#useJakartaEe}}
     <quarkus-plugin.version>3.0.1.Final</quarkus-plugin.version>
     <quarkus.platform.version>3.0.1.Final</quarkus.platform.version>
-{{/useJakartaEe}}
-{{^useJakartaEe}}
-    <quarkus-plugin.version>1.1.1.Final</quarkus-plugin.version>
-    <quarkus.platform.version>1.1.1.Final</quarkus.platform.version>
-{{/useJakartaEe}}
     <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <surefire-plugin.version>2.22.1</surefire-plugin.version>
-{{#useJakartaEe}}
     <jakarta.ws.rs-version>3.1.0</jakarta.ws.rs-version>
     <jakarta.annotation-api-version>2.1.1</jakarta.annotation-api-version>
-{{/useJakartaEe}}
-{{^useJakartaEe}}
-    <javax.ws.rs-version>2.1.1</javax.ws.rs-version>
-    <javax.annotation-api-version>1.3.2</javax.annotation-api-version>
-{{/useJakartaEe}}
-{{#useSwaggerAnnotations}}
     <io.swagger.annotations.version>1.6.10</io.swagger.annotations.version>
-{{/useSwaggerAnnotations}}
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -75,7 +54,6 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-openapi</artifactId>
     </dependency>
-{{#useJakartaEe}}
     <dependency>
        <groupId>jakarta.ws.rs</groupId>
        <artifactId>jakarta.ws.rs-api</artifactId>
@@ -87,28 +65,12 @@
        <artifactId>jakarta.annotation-api</artifactId>
        <version>${jakarta.annotation-api-version}</version>
     </dependency>
-{{/useJakartaEe}}
-{{^useJakartaEe}}
-    <dependency>
-       <groupId>javax.ws.rs</groupId>
-       <artifactId>javax.ws.rs-api</artifactId>
-       <version>${javax.ws.rs-version}</version>
-       <scope>provided</scope>
-    </dependency>
-    <dependency>
-       <groupId>javax.annotation</groupId>
-       <artifactId>javax.annotation-api</artifactId>
-       <version>${javax.annotation-api-version}</version>
-    </dependency>
-{{/useJakartaEe}}
-{{#useSwaggerAnnotations}}
      <dependency>
         <groupId>io.swagger</groupId>
         <artifactId>swagger-annotations</artifactId>
         <version>${io.swagger.annotations.version}</version>
         <scope>provided</scope>
      </dependency>
-{{/useSwaggerAnnotations}}
   </dependencies>
   <build>
     <plugins>
