WIP test improvements

--- a/samples/openapi3/client/petstore/dart-dio/dio/built_value_tests/analysis_options.yaml
+++ b/samples/openapi3/client/petstore/dart-dio/dio/built_value_tests/analysis_options.yaml
@@ -2,8 +2,4 @@ analyzer:
   language:
     strict-inference: true
     strict-raw-types: true
-  strong-mode:
-    implicit-dynamic: false
-    implicit-casts: false
-  exclude:
-    - test/*.dart
+    strict-casts: true
