--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -19,10 +19,10 @@ jobs:
         java: [11, 17]
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK {{ matrix.java }}
+      - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v3
         with:
-          java-version: {{ matrix.java }}
+          java-version: ${{ matrix.java }}
           distribution: 'temurin'
       - name: Cache maven dependencies
         uses: actions/cache@v3
