test with jdk11 only

--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -16,7 +16,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        java: [11, 17]
+        java: [11]
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK ${{ matrix.java }}
